search/G_CQLParser/1.2.1-3.11.0-126705/src/main/java/search/library/util/cql/parser/gCQLParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. gCQLParser.java */
package search.library.util.cql.parser;

import java.util.*;

public class gCQLParser/*@bgen(jjtree)*/implements gCQLParserTreeConstants, gCQLParserConstants {/*@bgen(jjtree)*/
  protected JJTgCQLParserState jjtree = new JJTgCQLParserState();

/* *** Context-free grammar (EBNF) *** */
/* Note: In the start nonterminal, the action "return jjtThis" instructs
JavaCC to return the resulting parse tree from the generated parsing
method. Therefore, the start nonterminal has a result type (SimpleNode).
All other nonterminals have no result type (void).
*/

/* Start the nonterminal and its productions. */
  final public SimpleNode Start() throws ParseException {
 /*@bgen(jjtree) Start */
  SimpleNode jjtn000 = new SimpleNode(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      gCQLQuery();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

        /* Other nonterminals and their productions */
        /*void gCQLQuery():	{	}	{
	  LOOKAHEAD(2)	  < STAR > (PrefixAssignment() gCQLQuery() |
	  ScopedClause() [SortSpec()] [ProjectSpec()]) <STAR >
	  |< STAR > <DOUBLEQUOTES > <DOUBLEQUOTES > <STAR >	}*/

                /* Other nonterminals and their productions */
  final public void gCQLQuery() throws ParseException {
         /*@bgen(jjtree) gCQLQuery */
  SimpleNode jjtn000 = new SimpleNode(JJTGCQLQUERY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_1(2)) {
        jj_consume_token(STAR);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case GREATER:
          PrefixAssignment();
          CQLQuery();
          break;
        case SORTBY:
        case AND:
        case OR:
        case NOT:
        case PROX:
        case LPAREN:
        case CHARSTRING1:
        case CHARSTRING2:
          ScopedClause();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SORTBY:
            SortSpec();
            break;
          default:
            jj_la1[0] = jj_gen;
            ;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case PROJECT:
            ProjectSpec();
            break;
          default:
            jj_la1[1] = jj_gen;
            ;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case FUSE:
            FuseSpec();
            break;
          default:
            jj_la1[2] = jj_gen;
            ;
          }
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        jj_consume_token(STAR);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STAR:
          jj_consume_token(STAR);
          jj_consume_token(DOUBLEQUOTES);
          jj_consume_token(DOUBLEQUOTES);
          jj_consume_token(STAR);
          break;
        default:
          jj_la1[4] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
            if (jjtc000) {
              jjtree.clearNodeScope(jjtn000);
              jjtc000 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte000;}
            }
            if (jjte000 instanceof ParseException) {
              {if (true) throw (ParseException)jjte000;}
            }
            {if (true) throw (Error)jjte000;}
    } finally {
            if (jjtc000) {
              jjtree.closeNodeScope(jjtn000, true);
            }
    }
  }

  final public void SortSpec() throws ParseException {
         /*@bgen(jjtree) SortSpec */
  SimpleNode jjtn000 = new SimpleNode(JJTSORTSPEC);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SORTBY);
      SingleSpec();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SORTBY:
      case AND:
      case OR:
      case NOT:
      case PROX:
      case CHARSTRING1:
      case CHARSTRING2:
        label_1:
        while (true) {
          SingleSpec();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SORTBY:
          case AND:
          case OR:
          case NOT:
          case PROX:
          case CHARSTRING1:
          case CHARSTRING2:
            ;
            break;
          default:
            jj_la1[5] = jj_gen;
            break label_1;
          }
        }
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
            if (jjtc000) {
              jjtree.clearNodeScope(jjtn000);
              jjtc000 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte000;}
            }
            if (jjte000 instanceof ParseException) {
              {if (true) throw (ParseException)jjte000;}
            }
            {if (true) throw (Error)jjte000;}
    } finally {
            if (jjtc000) {
              jjtree.closeNodeScope(jjtn000, true);
            }
    }
  }

  final public void ProjectSpec() throws ParseException {
         /*@bgen(jjtree) ProjectSpec */
  SimpleNode jjtn000 = new SimpleNode(JJTPROJECTSPEC);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PROJECT);
      SingleSpec();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SORTBY:
      case AND:
      case OR:
      case NOT:
      case PROX:
      case CHARSTRING1:
      case CHARSTRING2:
        label_2:
        while (true) {
          SingleSpec();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SORTBY:
          case AND:
          case OR:
          case NOT:
          case PROX:
          case CHARSTRING1:
          case CHARSTRING2:
            ;
            break;
          default:
            jj_la1[7] = jj_gen;
            break label_2;
          }
        }
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
            if (jjtc000) {
              jjtree.clearNodeScope(jjtn000);
              jjtc000 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte000;}
            }
            if (jjte000 instanceof ParseException) {
              {if (true) throw (ParseException)jjte000;}
            }
            {if (true) throw (Error)jjte000;}
    } finally {
            if (jjtc000) {
              jjtree.closeNodeScope(jjtn000, true);
            }
    }
  }

  final public void FuseSpec() throws ParseException {
         /*@bgen(jjtree) FuseSpec */
  SimpleNode jjtn000 = new SimpleNode(JJTFUSESPEC);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FUSE);
      SingleSpec();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SORTBY:
      case AND:
      case OR:
      case NOT:
      case PROX:
      case CHARSTRING1:
      case CHARSTRING2:
        SingleSpec();
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
            if (jjtc000) {
              jjtree.clearNodeScope(jjtn000);
              jjtc000 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte000;}
            }
            if (jjte000 instanceof ParseException) {
              {if (true) throw (ParseException)jjte000;}
            }
            {if (true) throw (Error)jjte000;}
    } finally {
            if (jjtc000) {
              jjtree.closeNodeScope(jjtn000, true);
            }
    }
  }

  final public void SingleSpec() throws ParseException {
         /*@bgen(jjtree) SingleSpec */
  SimpleNode jjtn000 = new SimpleNode(JJTSINGLESPEC);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Index();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SLASH:
        ModifierList();
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
            if (jjtc000) {
              jjtree.clearNodeScope(jjtn000);
              jjtc000 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte000;}
            }
            if (jjte000 instanceof ParseException) {
              {if (true) throw (ParseException)jjte000;}
            }
            {if (true) throw (Error)jjte000;}
    } finally {
            if (jjtc000) {
              jjtree.closeNodeScope(jjtn000, true);
            }
    }
  }

  final public void CQLQuery() throws ParseException {
         /*@bgen(jjtree) CQLQuery */
  SimpleNode jjtn000 = new SimpleNode(JJTCQLQUERY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case GREATER:
        PrefixAssignment();
        CQLQuery();
        break;
      case SORTBY:
      case AND:
      case OR:
      case NOT:
      case PROX:
      case LPAREN:
      case CHARSTRING1:
      case CHARSTRING2:
        ScopedClause();
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
            if (jjtc000) {
              jjtree.clearNodeScope(jjtn000);
              jjtc000 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte000;}
            }
            if (jjte000 instanceof ParseException) {
              {if (true) throw (ParseException)jjte000;}
            }
            {if (true) throw (Error)jjte000;}
    } finally {
            if (jjtc000) {
              jjtree.closeNodeScope(jjtn000, true);
            }
    }
  }

/* TODO: case without prefix not defined here */
  final public void PrefixAssignment() throws ParseException {
 /*@bgen(jjtree) PrefixAssignment */
  SimpleNode jjtn000 = new SimpleNode(JJTPREFIXASSIGNMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(GREATER);
      Prefix();
      jj_consume_token(EQUALS);
      URI();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void ScopedClause() throws ParseException {
 /*@bgen(jjtree) ScopedClause */
  SimpleNode jjtn000 = new SimpleNode(JJTSCOPEDCLAUSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      SearchClause();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
      case OR:
      case NOT:
      case PROX:
        label_3:
        while (true) {
          BooleanGroup();
          SearchClause();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case AND:
          case OR:
          case NOT:
          case PROX:
            ;
            break;
          default:
            jj_la1[12] = jj_gen;
            break label_3;
          }
        }
        break;
      default:
        jj_la1[13] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void BooleanGroup() throws ParseException {
 /*@bgen(jjtree) BooleanGroup */
  SimpleNode jjtn000 = new SimpleNode(JJTBOOLEANGROUP);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Boolean();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SLASH:
        ModifierList();
        break;
      default:
        jj_la1[14] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Boolean() throws ParseException {
 /*@bgen(jjtree) Boolean */
  SimpleNode jjtn000 = new SimpleNode(JJTBOOLEAN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token bool = null;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        bool = jj_consume_token(AND);
        break;
      case OR:
        bool = jj_consume_token(OR);
        break;
      case NOT:
        bool = jj_consume_token(NOT);
        break;
      case PROX:
        bool = jj_consume_token(PROX);
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.setText(bool.image);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/* Here if we have a relation and a second term, then the fist term is an index. In other case it's a searchTerm */
/*void SearchClause():{}{  < LPAREN > CQLQuery() < RPAREN > | Term() [Relation() SearchTerm()]} */
  final public void SearchClause() throws ParseException {
 /*@bgen(jjtree) SearchClause */
  SimpleNode jjtn000 = new SimpleNode(JJTSEARCHCLAUSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
        jj_consume_token(LPAREN);
        CQLQuery();
        jj_consume_token(RPAREN);
        break;
      default:
        jj_la1[16] = jj_gen;
        if (jj_2_2(2)) {
          Index();
          Relation();
          SearchTerm();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SORTBY:
          case AND:
          case OR:
          case NOT:
          case PROX:
          case CHARSTRING1:
          case CHARSTRING2:
            SearchTerm();
            break;
          default:
            jj_la1[17] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Relation() throws ParseException {
 /*@bgen(jjtree) Relation */
  SimpleNode jjtn000 = new SimpleNode(JJTRELATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);String rel = null;
    try {
      Comparitor();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SLASH:
        ModifierList();
        break;
      default:
        jj_la1[18] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  final public String Comparitor() throws ParseException {
 /*@bgen(jjtree) Comparitor */
  SimpleNode jjtn000 = new SimpleNode(JJTCOMPARITOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);String comp = null;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQUALS:
      case GREATER:
      case LESS:
      case GEQUAL:
      case LEQUAL:
      case NOTEQUAL:
      case EXACT:
        comp = ComparitorSymbol();
        break;
      case CHARSTRING1:
      case CHARSTRING2:
        comp = NamedComparitor();
        break;
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.setText(comp);
    {if (true) return comp;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public String ComparitorSymbol() throws ParseException {
 /*@bgen(jjtree) ComparitorSymbol */
  SimpleNode jjtn000 = new SimpleNode(JJTCOMPARITORSYMBOL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token comp = null;
  String compS = null;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQUALS:
        comp = jj_consume_token(EQUALS);
        break;
      case GREATER:
        comp = jj_consume_token(GREATER);
        break;
      case LESS:
        comp = jj_consume_token(LESS);
        break;
      case GEQUAL:
        comp = jj_consume_token(GEQUAL);
        break;
      case LEQUAL:
        comp = jj_consume_token(LEQUAL);
        break;
      case NOTEQUAL:
        comp = jj_consume_token(NOTEQUAL);
        break;
      case EXACT:
        comp = jj_consume_token(EXACT);
        break;
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.setText(comp.image);
    compS = comp.image;
    {if (true) return compS;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
    throw new Error("Missing return statement in function");
  }

  final public String NamedComparitor() throws ParseException {
 /*@bgen(jjtree) NamedComparitor */
  SimpleNode jjtn000 = new SimpleNode(JJTNAMEDCOMPARITOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);String comp = null;
    try {
      comp = Identifier();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.setText(comp);
    {if (true) return comp;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public void ModifierList() throws ParseException {
 /*@bgen(jjtree) ModifierList */
  SimpleNode jjtn000 = new SimpleNode(JJTMODIFIERLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Modifier();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SLASH:
        label_4:
        while (true) {
          Modifier();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SLASH:
            ;
            break;
          default:
            jj_la1[21] = jj_gen;
            break label_4;
          }
        }
        break;
      default:
        jj_la1[22] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Modifier() throws ParseException {
 /*@bgen(jjtree) Modifier */
  SimpleNode jjtn000 = new SimpleNode(JJTMODIFIER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SLASH);
      ModifierName();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQUALS:
      case GREATER:
      case LESS:
      case GEQUAL:
      case LEQUAL:
      case NOTEQUAL:
      case EXACT:
        ComparitorSymbol();
        ModifierValue();
        break;
      default:
        jj_la1[23] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Prefix() throws ParseException {
 /*@bgen(jjtree) Prefix */
  SimpleNode jjtn000 = new SimpleNode(JJTPREFIX);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);String term = null;
    try {
      term = Term();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.setText(term);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void URI() throws ParseException {
 /*@bgen(jjtree) URI */
  SimpleNode jjtn000 = new SimpleNode(JJTURI);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);String uri = null;
    try {
      uri = Term();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.setText(uri);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void ModifierName() throws ParseException {
 /*@bgen(jjtree) ModifierName */
  SimpleNode jjtn000 = new SimpleNode(JJTMODIFIERNAME);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);String mdName = null;
    try {
      mdName = Term();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.setText(mdName);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }
